ECL 10.1.1:
===========

* Bugs fixed:

 - DIRECTORY used stat() also on files that did not match the directory masks.

 - The syntax for matching strings in DIRECTORY is now the same as in
   PATHNAME-MATCH-P. Formerly there were small differences, the forming
   understanding characters #\? and #\\

 - Standalone executables do not require the existence of the ECLDIR directory
   to start up -- it may be required, though, for working Unicode because the
   encodings are stored there.

 - PROCESS-JOIN was exported from the wrong package.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***