@@ -15,6 +15,8 @@ ECL 10.1.1:
 
  - PROCESS-JOIN was exported from the wrong package.
 
+ - PROCESS-JOIN would fail when called while a thread was being started.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
